force-app/main/default/objects/Account/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>