force-app/main/default/objects/Account/fields/Maximum_ship_size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_ship_size__c</fullName>
    <label>Maximum ship size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>