force-app/main/default/objects/Account/fields/Number_of_ships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ships__c</fullName>
    <label>Number of ships</label>
    <summaryForeignKey>Ship__c.Ship_owner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>