force-app/main/default/objects/Account/fields/Shipping_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Order</label>
    <referenceTo>Shipping_Order__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>