force-app/main/default/objects/Account/fields/Total_actual_open_order_TEU__c.field-meta.xml
<CustomField>
    <fullName>Total_actual_open_order_TEU__c</fullName>
    <label>Total actual open order TEU</label>
    <summarizedField>Shipping_Order__c.Actual_TEU__c</summarizedField>
    <summaryFilterItems>
        <field>Shipping_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Shipping_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>