force-app/main/default/objects/Account/fields/Total_number_of_ships_TEU__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_ships_TEU__c</fullName>
    <label>Total number of ships TEU</label>
    <summarizedField>Ship__c.Total_TEU__c</summarizedField>
    <summaryForeignKey>Ship__c.Ship_owner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>