force-app/main/default/objects/Account/fields/Total_orders__c.field-meta.xml
<CustomField>
    <fullName>Total_orders__c</fullName>
    <label>Total orders</label>
    <summaryForeignKey>Shipping_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>