force-app/main/default/objects/Account/fields/total_planned_order_TEU__c.field-meta.xml
<CustomField>
    <fullName>total_planned_order_TEU__c</fullName>
    <label>total planned order TEU</label>
    <summarizedField>Shipping_Order__c.Planned_TEU__c</summarizedField>
    <summaryFilterItems>
        <field>Shipping_Order__c.Status__c</field>
        <operation>notEqual</operation>
        <value>delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Shipping_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>