force-app/main/default/objects/Account/recordTypes/Port.recordType-meta.xml
<RecordType>
    <fullName>Port</fullName>
    <active>true</active>
    <label>Port</label>
</RecordType>