force-app/main/default/objects/Account/recordTypes/Ship_owner.recordType-meta.xml
<RecordType>
    <fullName>Ship_owner</fullName>
    <active>true</active>
    <label>Ship-owner</label>
</RecordType>