force-app/main/default/objects/Account/listViews/Accounts_Channel.listView-meta.xml
<ListView>
    <fullName>Accounts_Channel</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts Channel</label>
</ListView>