force-app/main/default/objects/Account/listViews/Accounts_list.listView-meta.xml
<ListView>
    <fullName>Accounts_list</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Total_orders__c</columns>
    <columns>Number_of_ships__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts list</label>
</ListView>